@@ -29,10 +29,8 @@ public class CorsConfig implements WebMvcConfigurer {
     {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedOrigins(List.of("*"));
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET",
-
-                "POST", "PUT", "DELETE"));
+        corsConfiguration.setAllowedOrigins(List.of("https://spp-angular-frontend.web.app"));
+        corsConfiguration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE"));
         corsConfiguration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
